# vault-explorer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.py  pyproject.toml
.github/workflows/: ci.yml
indexer/: build.py  insights.py  links.py  search.py  system.py  vault.py
indexer/adapters/: __init__.py  commands.py  mcps.py  memory.py  routines.py  skills.py
server/: app.py
tests/: conftest.py  test_api.py  test_insights.py  test_links.py  test_search.py  test_system.py  test_vault.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: api.ts  graph.ts  hulls.ts  insights.ts  inspector.ts  main.ts  minimap.ts  pie.ts  ring.ts  search.ts  store.ts  style.css  types.d.ts  wheelzoom.ts
