[project]
name = "vault-explorer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-frontmatter>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["indexer*", "server*"]
